--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,11 @@
             <artifactId>flyway-core</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.4</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
